--- a/cinema-main-service/src/main/resources/templates/films/list.html
+++ b/cinema-main-service/src/main/resources/templates/films/list.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,6 +33,7 @@
                     <th class="white">Жанр</th>
                     <th class="white">Год</th>
                     <th class="white">Продолжительность</th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -45,11 +47,102 @@
                     <td th:text="${film.genres != null ? #strings.listJoin(film.genres, ', ') : 'Нет данных'}"></td>
                     <td th:text="${film.year != null ? film.year : 'Нет данных'}"></td>
                     <td th:text="${film.movieLength != null ? film.movieLength + ' мин.' : 'Нет данных'}"/>
+                    <td><a th:href="@{/films/{filmId}(filmId=${film.id})}" class="btn btn-info">Подробнее</a>
+                        <br/>
+                        <br/>
+                        <button class="btn btn-primary" data-bs-target="#newFilmSessionModal" data-bs-toggle="modal"
+                                type="button">Создать киносеанс
+                        </button>
+                    </td>
+
+                    <!-- Модальное окно New film session -->
+                    <div class="modal fade" id="newFilmSessionModal"
+                         tabindex="-1" role="dialog"
+                         aria-labelledby="newSessionModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+
+                                <!-- Заголовок модального окна -->
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="newSessionModalLabel">Добавить киносеанс</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                </div>
+
+                                <!-- Тело модального окна -->
+                                <div class="modal-body black">
+                                    <!-- Форма -->
+                                    <form th:method="POST"
+                                          th:action="@{admin/add-film-session/{filmId}(filmId=${film.id})}"
+                                          th:object="${newFilmSession}">
+                                        <input type="hidden" th:name="filmId" th:value="${film.id}">
+                                        <label for="film-name"><b>Название фильма</b></label>
+                                        <input class="form-control" id="film-name"
+                                               th:type="text"
+                                               th:value="${film.name}" readonly/>
+                                        <br>
+                                        <label for="hall-select"><b>Выберите зал</b></label>
+                                        <select class="form-control" id="hall-select" th:name="hallId" required>
+                                            <option th:each="hall : ${halls}" th:value="${hall.id}"
+                                                    th:text="${hall.name}">Зал</option>
+                                        </select>
+                                        <br>
+<!--                                        <label for="create-lastname"><b>Lastname</b></label>-->
+<!--                                        <input class="form-control" id="create-lastname"-->
+<!--                                               th:name="name"-->
+<!--                                               th:type="text" required/>-->
+<!--                                        <br>-->
+<!--                                        <label for="create-email"><b>Email</b></label>-->
+<!--                                        <input class="form-control" id="create-email"-->
+<!--                                               th:name="email"-->
+<!--                                               th:type="text" required/>-->
+<!--                                        <br>-->
+<!--                                        <label for="create-username"><b>Login</b></label>-->
+<!--                                        <input class="form-control" id="create-username"-->
+<!--                                               th:name="username"-->
+<!--                                               th:type="text" required/>-->
+<!--                                        <br>-->
+<!--                                        <label for="create-password"><b>Password</b></label>-->
+<!--                                        <input class="form-control" id="create-password"-->
+<!--                                               th:name="password"-->
+<!--                                               th:type="password"-->
+<!--                                               placeholder="Password" required/>-->
+<!--                                        <br>-->
+<!--                                        <label for="listRoles"><b>Role</b></label>-->
+<!--                                        <select multiple class="form-control form control-sm" id="listRoles"-->
+<!--                                                name="listRoles" size="2" required>-->
+<!--                                            <option selected="selected" value="1">USER</option>-->
+<!--                                            <option value="2">ADMIN</option>-->
+<!--                                        </select>-->
+
+                                        <br>
+                                        <br><br>
+                                        <button class="btn btn-success btn-lg" th:type="submit"
+                                                value="Добавить киносеанс">Добавить киносеанс
+                                        </button>
+                                    </form>
+                                </div>
+                                <!-- Подвал модального окна -->
+                                <div class="modal-footer">
+                                    <button class="btn btn-secondary"
+                                            data-bs-dismiss="modal"
+                                            type="button">Закрыть
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
+
+
+</div>
+</div>
+
+
 </div>
 </body>
 </html>
