--- a/cinema-main-service/src/main/resources/templates/films/list.html
+++ b/cinema-main-service/src/main/resources/templates/films/list.html
@@ -50,13 +50,16 @@
                     <td><a th:href="@{/films/{filmId}(filmId=${film.id})}" class="btn btn-info">Подробнее</a>
                         <br/>
                         <br/>
-                        <button class="btn btn-primary" data-bs-target="#newFilmSessionModal" data-bs-toggle="modal"
+                        <button sec:authorize="${hasRole('ADMIN')}" class="btn btn-primary"
+                                data-bs-target="#newFilmSessionModal"
+                                th:data-bs-target="${'#newFilmSessionModal'+ film.id}" data-bs-toggle="modal"
                                 type="button">Создать киносеанс
                         </button>
                     </td>
 
                     <!-- Модальное окно New film session -->
                     <div class="modal fade" id="newFilmSessionModal"
+                         th:id="${'newFilmSessionModal'+ film.id}"
                          tabindex="-1" role="dialog"
                          aria-labelledby="newSessionModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -70,10 +73,10 @@
                                 </div>
 
                                 <!-- Тело модального окна -->
-                                <div class="modal-body black">
+                                <div class="modal-body">
                                     <!-- Форма -->
                                     <form th:method="POST"
-                                          th:action="@{admin/add-film-session/{filmId}(filmId=${film.id})}"
+                                          th:action="@{/admin/add-film-session}"
                                           th:object="${newFilmSession}">
                                         <input type="hidden" th:name="filmId" th:value="${film.id}">
                                         <label for="film-name"><b>Название фильма</b></label>
@@ -84,37 +87,21 @@
                                         <label for="hall-select"><b>Выберите зал</b></label>
                                         <select class="form-control" id="hall-select" th:name="hallId" required>
                                             <option th:each="hall : ${halls}" th:value="${hall.id}"
-                                                    th:text="${hall.name}">Зал</option>
+                                                    th:text="${hall.name}">Зал
+                                            </option>
                                         </select>
                                         <br>
-<!--                                        <label for="create-lastname"><b>Lastname</b></label>-->
-<!--                                        <input class="form-control" id="create-lastname"-->
-<!--                                               th:name="name"-->
-<!--                                               th:type="text" required/>-->
-<!--                                        <br>-->
-<!--                                        <label for="create-email"><b>Email</b></label>-->
-<!--                                        <input class="form-control" id="create-email"-->
-<!--                                               th:name="email"-->
-<!--                                               th:type="text" required/>-->
-<!--                                        <br>-->
-<!--                                        <label for="create-username"><b>Login</b></label>-->
-<!--                                        <input class="form-control" id="create-username"-->
-<!--                                               th:name="username"-->
-<!--                                               th:type="text" required/>-->
-<!--                                        <br>-->
-<!--                                        <label for="create-password"><b>Password</b></label>-->
-<!--                                        <input class="form-control" id="create-password"-->
-<!--                                               th:name="password"-->
-<!--                                               th:type="password"-->
-<!--                                               placeholder="Password" required/>-->
-<!--                                        <br>-->
-<!--                                        <label for="listRoles"><b>Role</b></label>-->
-<!--                                        <select multiple class="form-control form control-sm" id="listRoles"-->
-<!--                                                name="listRoles" size="2" required>-->
-<!--                                            <option selected="selected" value="1">USER</option>-->
-<!--                                            <option value="2">ADMIN</option>-->
-<!--                                        </select>-->
-
+                                        <label for="start-time"><b>Начало киносеанса</b></label>
+                                        <input class="form-control" id="start-time"
+                                               type="datetime-local" th:name="startTime" required/>
+                                        <br>
+                                        <label for="end-time"><b>Конец киносеанса</b></label>
+                                        <input class="form-control" id="end-time"
+                                               type="datetime-local" th:name="endTime" required/>
+                                        <br>
+                                        <label for="price"><b>Цена билета</b></label>
+                                        <input class="form-control" id="price"
+                                               type="number" step="10" min="0" th:name="price" required/>
                                         <br>
                                         <br><br>
                                         <button class="btn btn-success btn-lg" th:type="submit"
@@ -137,12 +124,6 @@
             </table>
         </div>
     </div>
-
-
-</div>
-</div>
-
-
 </div>
 </body>
 </html>
