--- a/cinema-main-service/src/main/resources/templates/errors/409.html
+++ b/cinema-main-service/src/main/resources/templates/errors/409.html
@@ -14,7 +14,7 @@
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" th:href="@{/styles.css}"/>
-    <title>404 Not Found</title>
+    <title>409 Conflict</title>
 </head>
 <body class="background-all-body">
 
